--- a/static/theme/default/template.html
+++ b/static/theme/default/template.html
@@ -8,7 +8,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-<title>{% block title %} {% endblock %} - NOME DO PROJETO</title>
+<title>{% block title %} {% endblock %} - {{NOME_PROJETO}}</title>
 	<meta name="description" content="{% block description %} {% endblock %}">
 	<meta name="keywords" content="{% block keywords %} {% endblock %}">
 	
@@ -38,7 +38,7 @@
         	<div id="logo">
 				<a href="{{LINK}}">
 				<!--<img src="{{STATIC_URL}}img/logo.png" alt="nome do projeto"> -->
-					<h1 style="margin-top:15px"><a href="/"> NOME DO PROJETO </a></h1>
+					<h1 style="margin-top:15px"><a href="/"> {{NOME_PROJETO}} </a></h1>
 				</a>
 			</div> 
         </div>
@@ -104,7 +104,7 @@
 	<!-- footer area -->    
 	<footer>
 		<div id="colophon" class="wrapper clearfix">
-	    	&copy; ANO - NOME DO PROJETO - Revisão X
+	    	&copy; {{ANO_PROJETO}} - {{NOME_PROJETO}} - Versão {{VERSAO_PROJETO}}
 	    </div>
 	    
 		<div id="attribution" class="wrapper clearfix" style="color:#666; font-size:11px;">Desenvolvido em Software Livre</div>
